--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-session": "^1.15.4",
-    "mongoose": "^4.11.5",
+    "method-override": "^2.3.9",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
