--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "~4.14.0",
     "express-session": "^1.15.5",
     "method-override": "^2.3.9",
-    "mongoose": "4.1.9",
+    "mongoose": "^4.1.9",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
