--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^2.3.9",
     "mongoose": "^4.1.9",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
